fixed gap between header and calendar body
git-svn-id: https://svn.apache.org/repos/asf/incubator/click/trunk@777241 13f79535-47bb-0310-9956-ffa450edef68

--- a/click/extras/src/META-INF/web/click/calendar/plain.css
+++ b/click/extras/src/META-INF/web/click/calendar/plain.css
@@ -54,6 +54,8 @@ iframe.ie6_blocker {
 
 .calendar_date_select .cds_header {
   text-align:center;
+  padding-top: 1px;
+  height:19px;
 }
 
 .calendar_date_select .cds_header * {
