--- a/click/extras/src/META-INF/web/click/calendar/red.css
+++ b/click/extras/src/META-INF/web/click/calendar/red.css
@@ -59,6 +59,8 @@ iframe.ie6_blocker {
   background-color: #ccc;
   border-bottom: 2px solid #aaa;
   text-align:center;
+  padding-top: 1px;
+  height:19px;
 }
 
 .calendar_date_select .cds_header span {
